<resources>
    <!--MainActivity strings-->
    <string name="app_name">SperoVideo</string>
    <string name="remote">Afstandsbediening</string>
    <string name="register">Registreren</string>
    <string name="analyse">Analyse</string>
    <string name="camera">Camera</string>


    <!--camera string-->
    <string name="scan_chip_or_manual">Scan chip of start manueel</string>
    <string name="connected">Verbonden met %1$s</string>
    <string name="camera_service_started">Camera service gestart</string>
    <string name="camera_service_failed">Camera servicefout, probeer opnieuw</string>
    <string name="wifi_direct_n_a">Wifi-direct niet beschikbaar</string>
    <!--Analyse strings-->
    <string name="select_camera">Selecteer een camera</string>
    <string name="refresh_button">Refresh</string>
    <string name="logout">Uitloggen</string>
    <string name="previewtext">Preview text</string>
    <string name="searching_camera">Bezig om camera\'s te vinden</string>
    <string name="peer_discovery_failed">Zoeken gefaald, staat uw Wifi aan?</string>
    <string name="peer_discovery_succesvol">Zoeken is gelukt!</string>
    <string name="connection_camera_success">Verbonden met camera</string>
    <string name="connection_camera_failed">Verbinding met camera gefaald</string>
    <string name="wifi_direct_support_fail">Uw apparaat ondersteunt geen Wifi-direct</string>
    <string name="error">Error: </string>
    <string name="video_recording">Bezig met video-opname</string>
    <string name="cameras_found">Camera(\'s) gevonden</string>
    <string name="video_received">Bezig met verwerken van video %1$d MB</string>
    <string name="loading_cameras">Gevonden cameras laden</string>
    <string name="wifi_direct_busy">Wifi direct is bezig</string>
    <string name="error_searching_cameras">Fout bij zoeken naar cameras, probeer opnieuw</string>
    <string name="unknown_error">Onbekende fout</string>
    <string name="playing_video">Video aan het afspelen</string>
    <string name="pick_slowmotion">Kies een afspeelsnelheid</string>

    <!--Register strings-->
    <string name="email_hint">E-mail</string>
    <string name="username_hint">Gebruikersnaam</string>
    <string name="password_hint">Wachtwoord</string>
    <string name="password_confirm_hint">Herhaal wachtwoord</string>
    <string name="first_name_hint">Voornaam(optioneel)</string>
    <string name="last_name_hint">Achternaam(optioneel)</string>
    <string name="city_hint">Stad(optioneel)</string>
    <string name="nfc_hint">Registreer je nfc tag door deze tegen het apparaat aan te houden(optioneel)</string>

    <!--Menu strings-->
    <string name="settings">Instellingen</string>

    <!--Login strings-->
    <string name="login">Login</string>

    <!--Remote strings-->
    <string name="remote_hint">Scan uw RFID band om de opname te beginnen</string>

    <!--Settings strings-->
    <string name="resolution_label">Resolutie</string>
    <string name="fps_label">Frames per seconde(fps)</string>

    <!--Video string-->
    <string name="add_tag">Tag toevoegen</string>
    <string name="tag_hint">Tag</string>
    <string name="tag_success">Tag succesvol opgeslagen.</string>
    <string name="tag_fail">Er is iets misgegaan.</string>

    <string name="video_uploaded">Video upload succesvol.</string>
    <string name="add_comment">Comment toevoegen</string>
    <string name="comment_hint">Comment</string>
    <string name="comment_success">Comment succesvol opgeslagen.</string>
    <string name="comment_fail">Er is iets misgegaan met opslaan van comment.</string>

    <!--Algemeen-->
    <string name="save">Opslaan</string>
    <string name="cancel">Annuleren</string>
</resources>

